# leo-project

./: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/app/: .eslintrc.js  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/app/.storybook/: main.ts  preview-head.html  preview.ts
apps/app/src/: app.tsx  index.css  index.tsx  init.ts  preload.ts
apps/app/src/components/books/: book-display.tsx  book.tsx
apps/app/src/components/layout/: default-layout.tsx  header.tsx  layout.tsx  page.tsx  side-bar.tsx
apps/app/src/components/reader/: book.tsx  context.tsx  control.tsx  element.ts  index.tsx  provider.tsx  stores.tsx  toolbar.tsx  viewer.tsx
apps/app/src/components/ui/: button.stories.tsx  button.tsx  dropdown-menu.stories.tsx  dropdown-menu.tsx  icon-button.stories.tsx  icon-button.tsx  popover.stories.tsx  popover.tsx  shared.tsx  styles.tsx
apps/app/src/core/: index.ts  storage.ts
apps/app/src/core/databases/: idb.ts  sqlite.ts
apps/app/src/core/models/: index.ts
apps/app/src/libs/: book.ts
apps/app/src/pages/: books.tsx  reader.tsx
apps/app/src/utilities/: epub.ts  file-picker.ts  index.ts  platform.ts
apps/app/src/utils/: styling.tsx
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/electron/: electron-builder.yml  electron.vite.config.ts  package.json
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: index.tsx  prerender.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+10 files in other folders)
